<resources>
    <string name="app_name">FitnessApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fitness_main">FitnessMainActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fitnesstracker">Fitness Tracker</string>
    <string name="fitnessfiles">Fitness Files</string>
    <string name="fitnesschart">Fitness Chart</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnStartStop">Start</string>
    <string name="btnViewTrack">View Track</string>
    <string name="caloriesText">Calories Burned:</string>
    <string name="distanceText">Distance (meters):</string>
    <string name="transportationText">Transportation: </string>
    <string name="timer">Time: </string>
</resources>
