<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.csulb.edu.fitnessapp.FitnessTrackerFragment">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_marginBottom="150dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStartStop"
        android:onClick="onButtonStartStopClick"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnStartStop"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/caloriesVal"
        android:text="0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/caloriesText"
        android:text="@string/caloriesText"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/caloriesVal"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timerText"
        android:text="@string/timer"
        android:layout_above="@id/caloriesText"
        android:layout_toLeftOf="@+id/timerVal"
        android:layout_marginRight="5dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timerVal"
        android:text="0:00"
        android:layout_above="@id/caloriesText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distanceVal"
        android:text="0"
        android:layout_above="@id/timerText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distanceText"
        android:text="@string/distanceText"
        android:layout_above="@id/timerText"
        android:layout_toLeftOf="@id/distanceVal"
        android:layout_marginRight="5dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transportationSel"
        android:layout_above="@id/distanceText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transportationText"
        android:text="@string/transportationText"
        android:layout_above="@id/distanceText"
        android:layout_toLeftOf="@id/transportationSel"
        android:layout_marginRight="5dp"
        android:textSize="20sp"/>

</RelativeLayout>
